--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </div>
   
   <script type="module">
-    // Using the modern Tango API with a CDN that supports ESM exports
-    import { Adb, AdbDaemonTransport } from "https://esm.sh/@yume-chan/adb@2.1.0?target=es2020";
-    import { AdbDaemonWebUsbDeviceManager } from "https://esm.sh/@yume-chan/adb-daemon-webusb@2.1.0?target=es2020";
+    // Using the modern Tango API with a CDN that ships native ESM
+    import { Adb, AdbDaemonTransport } from "https://cdn.jsdelivr.net/npm/@yume-chan/adb@2.1.0/+esm";
+    import { AdbDaemonWebUsbDeviceManager } from "https://cdn.jsdelivr.net/npm/@yume-chan/adb-daemon-webusb@2.1.0/+esm";
     
     // --- CONFIG ---
     const PACKAGE_NAME = "com.example.muse"; 
