--- a/index.html
+++ b/index.html
@@ -31,148 +31,118 @@
     </div>
   </div>
 
-  <script type="module">
-    // Import ESM builds via +esm helper so paths always exist
-    import { Adb, AdbDaemonTransport } from "https://cdn.jsdelivr.net/npm/@yume-chan/adb@2.1.0/+esm";
-    import { AdbDaemonWebUsbDeviceManager } from "https://cdn.jsdelivr.net/npm/@yume-chan/adb-daemon-webusb@2.1.0/+esm";
+ <script type="module">
+  import { Adb, AdbDaemonTransport } from "https://cdn.jsdelivr.net/npm/@yume-chan/adb@2.1.0/+esm";
+  import { AdbDaemonWebUsbDeviceManager } from "https://cdn.jsdelivr.net/npm/@yume-chan/adb-daemon-webusb@2.1.0/+esm";
+  import AdbWebCredentialStore from "https://cdn.jsdelivr.net/npm/@yume-chan/adb-credential-web@0.0.24/+esm";
 
-    // --- CONFIG ---
-    const PACKAGE_NAME = "com.example.muse";
-    const PERMISSION = "android.permission.WRITE_SECURE_SETTINGS";
-    const CMD = `pm grant ${PACKAGE_NAME} ${PERMISSION}`;
+  // --- CONFIG ---
+  const PACKAGE_NAME = "com.example.muse";
+  const PERMISSION = "android.permission.WRITE_SECURE_SETTINGS";
+  const CMD = `pm grant ${PACKAGE_NAME} ${PERMISSION}`;
 
-    const consoleDiv = document.getElementById("console");
-    const connectBtn = document.getElementById("connectBtn");
+  const consoleDiv = document.getElementById("console");
+  const connectBtn = document.getElementById("connectBtn");
 
-    const log = (msg, isError = false) => {
-      const div = document.createElement("div");
-      div.textContent = `> ${msg}`;
-      if (isError) div.style.color = "#ff6b6b";
-      consoleDiv.appendChild(div);
-      consoleDiv.scrollTop = consoleDiv.scrollHeight;
-    };
+  const log = (msg, isError = false) => {
+    const div = document.createElement("div");
+    div.textContent = `> ${msg}`;
+    if (isError) div.style.color = "#ff6b6b";
+    consoleDiv.appendChild(div);
+    consoleDiv.scrollTop = consoleDiv.scrollHeight;
+  };
 
-    if (!navigator.usb) {
-      log("Error: WebUSB not supported. Use Chrome or Edge.", true);
+  if (!navigator.usb) {
+    log("Error: WebUSB not supported. Use Chrome or Edge.", true);
+    connectBtn.disabled = true;
+  } else {
+    log("System Ready. Click Connect.");
+  }
+
+  const CredentialStore = new AdbWebCredentialStore("muse-focus-key");
+
+  connectBtn.onclick = async () => {
+    let adb = null;
+    try {
+      log("Opening device picker...");
       connectBtn.disabled = true;
-    } else {
-      log("System Ready. Click Connect.");
-    }
 
-    connectBtn.onclick = async () => {
-      let adb = null;
-      try {
-        log("Opening device picker...");
-        connectBtn.disabled = true;
-
-        const manager = AdbDaemonWebUsbDeviceManager.BROWSER;
-        if (!manager) {
-          log("ERROR: WebUSB not available", true);
-          connectBtn.disabled = false;
-          return;
-        }
-
-        log("Requesting device...");
-        const device = await manager.requestDevice();
-
-        if (!device) {
-          log("No device selected.");
-          connectBtn.disabled = false;
-          return;
-        }
-
-        log(`Device selected: ${device.serial}`);
-        log("Connecting...");
-
-        const connection = await device.connect();
-        log("Authenticating...");
-        log("⚠️ CHECK YOUR PHONE for USB debugging authorization!");
-
-        const credentialStore = {
-          // In a real app you’d persist this (IndexedDB, localStorage, etc.)
-          async *iterateKeys() {
-            const stored = localStorage.getItem("adb_private_key");
-            if (stored) {
-              const keyData = Uint8Array.from(atob(stored), c => c.charCodeAt(0)).buffer;
-              yield keyData;
-            }
-          },
-          async generateKey() {
-            const keyPair = await crypto.subtle.generateKey(
-              {
-                name: "RSASSA-PKCS1-v1_5",
-                modulusLength: 2048,
-                publicExponent: new Uint8Array([0x01, 0x00, 0x01]),
-                hash: { name: "SHA-1" },
-              },
-              true,
-              ["sign", "verify"]
-            );
-
-            const pkcs8 = await crypto.subtle.exportKey("pkcs8", keyPair.privateKey);
-            const bytes = new Uint8Array(pkcs8);
-            let binary = "";
-            for (const b of bytes) binary += String.fromCharCode(b);
-            localStorage.setItem("adb_private_key", btoa(binary));
-
-            return pkcs8;
-          },
-        };
-
-        const transport = await AdbDaemonTransport.authenticate({
-          serial: device.serial,
-          connection,
-          credentialStore,
-        });
-
-        adb = new Adb(transport);
-
-        log("✓ Connected successfully!");
-        log("---------------------------");
-        log(`Executing: ${CMD}`);
-
-        const output = await adb.subprocess.spawnAndWaitLegacy(CMD);
-
-        log("---------------------------");
-        if (output && output.trim()) {
-          log(`Output: ${output.trim()}`);
-        } else {
-          log("Command executed successfully");
-        }
-        log("---------------------------");
-        log("✓ SUCCESS! Permission granted.");
-        log("✓ You can now disconnect your device.");
-
-        alert("✓ Success! Permission granted.\n\nYou can disconnect your device and use the app now.");
-      } catch (err) {
-        console.error("Full error:", err);
-
-        if (err.name === "NotFoundError" || err.message?.includes("cancelled")) {
-          log("Device selection cancelled.", false);
-        } else if (err.message?.includes("claim") || err.message?.includes("interface")) {
-          log("ERROR: Device interface is busy!", true);
-          log("Solutions:", false);
-          log("1. Run 'adb kill-server' in terminal", false);
-          log("2. Close other ADB tools", false);
-          log("3. Disconnect and reconnect device", false);
-        } else if (err.message?.includes("not authorized") || err.message?.includes("unauthorized")) {
-          log("ERROR: Device not authorized!", true);
-          log("Solution: Check your phone for USB debugging prompt and tap 'Allow'", false);
-        } else {
-          log(`ERROR: ${err.message || String(err)}`, true);
-        }
-      } finally {
-        if (adb) {
-          try {
-            await adb.close();
-            log("Connection closed.");
-          } catch (e) {
-            // Ignore
-          }
-        }
+      const manager = AdbDaemonWebUsbDeviceManager.BROWSER;
+      if (!manager) {
+        log("ERROR: WebUSB not available", true);
         connectBtn.disabled = false;
+        return;
       }
-    };
-  </script>
-</body>
-</html>
+
+      log("Requesting device...");
+      const device = await manager.requestDevice();
+
+      if (!device) {
+        log("No device selected.");
+        connectBtn.disabled = false;
+        return;
+      }
+
+      log(`Device selected: ${device.serial}`);
+      log("Connecting...");
+
+      const connection = await device.connect();
+      log("Authenticating...");
+      log("⚠️ CHECK YOUR PHONE for USB debugging authorization!");
+
+      const transport = await AdbDaemonTransport.authenticate({
+        serial: device.serial,
+        connection,
+        credentialStore: CredentialStore,
+      });
+
+      adb = new Adb(transport);
+
+      log("✓ Connected successfully!");
+      log("---------------------------");
+      log(`Executing: ${CMD}`);
+
+      const output = await adb.subprocess.spawnAndWaitLegacy(CMD);
+
+      log("---------------------------");
+      if (output && output.trim()) {
+        log(`Output: ${output.trim()}`);
+      } else {
+        log("Command executed successfully");
+      }
+      log("---------------------------");
+      log("✓ SUCCESS! Permission granted.");
+      log("✓ You can now disconnect your device.");
+
+      alert("✓ Success! Permission granted.\n\nYou can disconnect your device and use the app now.");
+    } catch (err) {
+      console.error("Full error:", err);
+
+      if (err.name === "NotFoundError" || err.message?.includes("cancelled")) {
+        log("Device selection cancelled.", false);
+      } else if (err.message?.includes("claim") || err.message?.includes("interface")) {
+        log("ERROR: Device interface is busy!", true);
+        log("Solutions:", false);
+        log("1. Run 'adb kill-server' in terminal", false);
+        log("2. Close other ADB tools", false);
+        log("3. Disconnect and reconnect device", false);
+      } else if (err.message?.includes("not authorized") || err.message?.includes("unauthorized")) {
+        log("ERROR: Device not authorized!", true);
+        log("Solution: Check your phone for USB debugging prompt and tap 'Allow'", false);
+      } else {
+        log(`ERROR: ${err.message || String(err)}`, true);
+      }
+    } finally {
+      if (adb) {
+        try {
+          await adb.close();
+          log("Connection closed.");
+        } catch (e) {
+          // Ignore
+        }
+      }
+      connectBtn.disabled = false;
+    }
+  };
+</script>
+
