--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       log("---------------------------");
       log(`Executing: ${CMD}`);
 
-      const output = await adb.subprocess.spawnAndWaitLegacy(CMD);
+      const output = await adb.subprocess.noneProtocol.spawnWaitText(CMD);
 
       log("---------------------------");
       if (output && output.trim()) {
@@ -145,4 +145,5 @@
     }
   };
 </script>
+
 
